# utils

./: .gitignore  .golangci.yaml  BUILD.bazel  README.md  WORKSPACE  bazel-aduu-dev-utils  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum  hello.go  repos.bzl
.github/workflows/: push-tags.yaml  test-master.yaml  test-pr.yaml  test-releases.yaml
aduuapp/: viper.go
claat/: BUILD.bazel  example.md  example2.md
completion/: BUILD.bazel  completion.go
completion/generate/: BUILD.bazel  generate.go
dash/: BUILD.bazel  doc.go  examples_test.go  run.go  runner.go  runner_test.go  settings.go  sleep.go  split-and-template.go  split-and-template_test.go  split.go  split_test.go  test-runner.go
dash/dmock/: BUILD.bazel  dmock.go  dmock_test.go
difftest/: BUILD.bazel  diff.go
dns/dyndns/: BUILD.bazel  dyndns.go  dyndns_test.go
dns/dyndns/services/: BUILD.bazel  services.go
dns/mydnslookup/: BUILD.bazel  lookupSrv.go
env/: BUILD.bazel  env.go  getenv.go  getenv_test.go
errors2/: BUILD.bazel  combinetwo.go  common_errors.go  iserror.go  iserror_test.go
exe/: BUILD.bazel  exe.go  exe_test.go  run.go  runner.go  runner_test.go  settings.go  split-command.go  split-command_test.go
exe2/: doc.go  examples_test.go  run.go  runner.go  runner_test.go  settings.go  sleep.go  split-and-template.go  split-and-template_test.go  split.go  split_test.go  test-runner.go
expand/: BUILD.bazel  base.go  base_test.go  expander.go
expander/: BUILD.bazel  expander.go
fmt2/: BUILD.bazel  printer.go
go/: BUILD.bazel
go/gocmdcopy/: BUILD.bazel  copy.go  copy_test.go
go/gocmdcopy/testdata/: BUILD.bazel  go.mod
go/gocmdcopy/testdata/a/: BUILD.bazel
go/gocmdcopy/testdata/b/: BUILD.bazel
go/godoc/: BUILD.bazel  godoc.go
go/gomod/: BUILD.bazel  directcaller.go  directcaller_test.go  gomod.go  gomodpath.go  gomodpath_test.go  makefile.go  makefile_test.go  workspace.go  workspace_test.go
go/gomod/directcallertest/: BUILD.bazel  directcaller_test.go
go/gomod/gomodtest/: BUILD.bazel  expander.go  file.go
go/gomod/testdata/: BUILD.bazel  go.mod  go.sum
go/gomod/testdata/a/: BUILD.bazel
go/gomod/testdata/b/: BUILD.bazel
helper/: BUILD.bazel  checkerr.go  errors.go  errors_test.go  helper.go  os.go  os_test.go  path.go  path_test.go  print.go  sql.go  wd.go
helper/config/: BUILD.bazel  config.go
helper/dbhelper/: BUILD.bazel  sqlx.go
helper/testhelper/: BUILD.bazel  closer.go  mustexist.go
logtesting/: klog.go  klog_test.go
projectpath/: BUILD.bazel  expander.go  projectpath.go  projectpath_test.go
projectpath/cmd/ppath/: BUILD.bazel  main.go  main_test.go
regex/: BUILD.bazel  groupMatch.go  groupMatch_test.go
runmanager/: BUILD.bazel  runmanager.go
runmanager/runnables/grpcandgrpcweb/: BUILD.bazel  services.go
runmanager/runnables/grpcproxy/: BUILD.bazel  runprox.go
runmanager/runnables/grpcserver/: BUILD.bazel  rungrpc.go
runmanager/runnables/grpcwebproxy/: BUILD.bazel  rungrpcproxy.go
runmanager/runnables/httpserver/: BUILD.bazel  runhttp.go
runmanager/runnables/sshtunnel/: BUILD.bazel  connect-local-to-remote-port.go  connect-local-to-remote-port_test.go  connect-remote-ports.go  connect-remote-ports_test.go
runmanager/runnables/sshtunnel/sshtunnelcmd/: BUILD.bazel  main.go
shell/: BUILD.bazel  shell.go
strings2/: BUILD.bazel  equal.go  equal_test.go  replacespaces.go  replacespaces_test.go
tar/: BUILD.bazel  tar.go  untar.go
tempdir/: BUILD.bazel  tempdir.go
template2/: BUILD.bazel  executetostring.go
web/cors/: BUILD.bazel  cors.go
yuml2svg/: BUILD.bazel  generate-yumls.go  generate-yumls_test.go
yuml2svg/yuml/: BUILD.bazel  yuml.go
