load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "exe.go",
        "run.go",
        "runner.go",
        "settings.go",
        "split-command.go",
    ],
    importpath = "aduu.dev/utils/exe",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "exe_test.go",
        "split-command_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//helper:go_default_library",
        "//helper/testhelper:go_default_library",
        "@tools_gotest//assert:go_default_library",
    ],
)
