load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "base.go",
        "expander.go",
    ],
    importpath = "aduu.dev/utils/expand",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["base_test.go"],
    embed = [":go_default_library"],
)
