load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checkerr.go",
        "errors.go",
        "helper.go",
        "os.go",
        "path.go",
        "print.go",
        "sql.go",
        "wd.go",
    ],
    importpath = "aduu.dev/utils/helper",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errors_test.go",
        "os_test.go",
        "path_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//exe:go_default_library",
        "//helper/testhelper:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
