load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "expander.go",
        "projectpath.go",
    ],
    importpath = "aduu.dev/utils/projectpath",
    visibility = ["//visibility:public"],
    deps = ["//expander:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["projectpath_test.go"],
    embed = [":go_default_library"],
)
