load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["groupMatch.go"],
    importpath = "aduu.dev/utils/regex",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_xerrors//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["groupMatch_test.go"],
    embed = [":go_default_library"],
)
