load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate.go"],
    importpath = "aduu.dev/utils/completion/generate",
    visibility = ["//visibility:public"],
    deps = [
        "//exe:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_tools//go/ast/astutil:go_default_library",
    ],
)
