load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dmock.go"],
    importpath = "aduu.dev/utils/dash/dmock",
    visibility = ["//visibility:public"],
    deps = [
        "//dash:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dmock_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//dash:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
