load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["godoc.go"],
    importpath = "aduu.dev/utils/go/godoc",
    visibility = ["//visibility:public"],
    deps = [
        "//exe:go_default_library",
        "//go/gomod:go_default_library",
        "//projectpath:go_default_library",
        "//tempdir:go_default_library",
        "@com_github_skratchdot_open_golang//open:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
