load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "directcaller.go",
        "gomod.go",
        "gomodpath.go",
        "makefile.go",
        "workspace.go",
    ],
    importpath = "aduu.dev/utils/go/gomod",
    visibility = ["//visibility:public"],
    deps = [
        "//expand:go_default_library",
        "//helper:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "gomodpath_test.go",
        "makefile_test.go",
        "workspace_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//helper/testhelper:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
