load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "closer.go",
        "mustexist.go",
        "tempdirs.go",
    ],
    importpath = "aduu.dev/utils/helper/testhelper",
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
