load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "expander.go",
        "file.go",
    ],
    importpath = "aduu.dev/utils/go/gomod/gomodtest",
    visibility = ["//visibility:public"],
    deps = [
        "//go/gomod:go_default_library",
        "//helper:go_default_library",
    ],
)
