load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["services.go"],
    importpath = "aduu.dev/utils/runmanager/runnables/grpcandgrpcweb",
    visibility = ["//visibility:public"],
    deps = [
        "//runmanager:go_default_library",
        "//runmanager/runnables/grpcserver:go_default_library",
        "//runmanager/runnables/grpcwebproxy:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
