load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rungrpcproxy.go"],
    importpath = "aduu.dev/utils/runmanager/runnables/grpcwebproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//runmanager:go_default_library",
        "//web/cors:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
