load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "connect-local-to-remote-port.go",
        "connect-remote-ports.go",
    ],
    importpath = "aduu.dev/utils/runmanager/runnables/sshtunnel",
    visibility = ["//visibility:public"],
    deps = [
        "//dash:go_default_library",
        "//runmanager:go_default_library",
        "@io_k8s_klog_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "connect-local-to-remote-port_test.go",
        "connect-remote-ports_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//dash:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
